--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "my-app",
+  "name": "pet-store",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@shopify/react-web-worker": "^5.0.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
